- correction of stylesheet for the structurbrowser to enable right alignment in webapp-install
git-svn-id: https://efaps.googlecode.com/svn/eFaps-WebApp-Install/trunk@6149 fee104cc-1dfa-8c0f-632d-d3b7e6b59fb0

--- a/src/main/efaps/org/efaps/ui/wicket/components/tree/StructurTreeTable_Base.css
+++ b/src/main/efaps/org/efaps/ui/wicket/components/tree/StructurTreeTable_Base.css
@@ -108,6 +108,10 @@ div.wicket-tree-table div.row:hover{
   background-color: #D0EDB8;
 }
 
+div.wicket-tree-table span.b_ span.c_ span {
+    display: block;
+}
+
 .eFapsCheckboxCell{
   margin-left: -9px;
   margin-top: 1px;
